--- a/CuriculumVitae/GanDevWebV2.0/css/style.css
+++ b/CuriculumVitae/GanDevWebV2.0/css/style.css
@@ -20,4 +20,5 @@ h2 {
     text-transform: uppercase;
     color: var(--color-secondary-2-3);
     text-shadow: 0.1rem 0.1rem 0.1rem var(--gray-black);
+    font-family: 'crete round', sans-serif;
 }
